--- a/0.md
+++ b/0.md
@@ -7,8 +7,9 @@ Ako nainštalovat/spustit arduino program:
 https://www.arduino.cc/en/software
 
 2. po otvoreni aplikacie v hornom paneli zvolte:
+
 Tools - port - zvolte port na ktorom mate arduino
-Tools - boadr - zvolte dosku ktoru mate 
+Tools - board - zvolte dosku ktoru mate 
 
 3. tuknite v lavo hore na šipku v pravo(upload) 
 
